--- a/css/styels.css
+++ b/css/styels.css
@@ -56,7 +56,7 @@ img {
     margin-bottom: 10px; }
 
 .content {
-  paddin-top: 15px;
+  padding-top: 15px;
   border-top: 2px solid #14ad08;
   margin-top: 20px; }
   .content ul li {
